force-app/main/default/objects/SalesTori_Business__c/SalesTori_Business__c.object-meta.xml
<CustomObject>
    <label>SalesTori_Business</label>
    <nameField>
        <label>SalesTori_Business</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesTori_Business</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>