force-app/main/default/objects/SalesTori_Business__c/fields/business_active__c.field-meta.xml
<CustomField>
    <fullName>business_active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>business_active</label>
    <type>Checkbox</type>
</CustomField>