force-app/main/default/objects/SalesTori_Business__c/fields/business_advancepayment_mandatory__c.field-meta.xml
<CustomField>
    <fullName>business_advancepayment_mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>business_advancepayment_mandatory</label>
    <type>Checkbox</type>
</CustomField>