force-app/main/default/objects/SalesTori_Business__c/fields/business_apartment__c.field-meta.xml
<CustomField>
    <fullName>business_apartment__c</fullName>
    <label>business_apartment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>