force-app/main/default/objects/SalesTori_Business__c/fields/business_axcompany__c.field-meta.xml
<CustomField>
    <fullName>business_axcompany__c</fullName>
    <label>business_axcompany</label>
    <length>255</length>
    <type>Text</type>
</CustomField>