force-app/main/default/objects/SalesTori_Business__c/fields/business_axcustomer_dimension4__c.field-meta.xml
<CustomField>
    <fullName>business_axcustomer_dimension4__c</fullName>
    <label>business_axcustomer_dimension4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>