force-app/main/default/objects/SalesTori_Business__c/fields/business_businessid__c.field-meta.xml
<CustomField>
    <fullName>business_businessid__c</fullName>
    <label>business_businessid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>