force-app/main/default/objects/SalesTori_Business__c/fields/business_city__c.field-meta.xml
<CustomField>
    <fullName>business_city__c</fullName>
    <label>business_city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>