force-app/main/default/objects/SalesTori_Business__c/fields/business_condominiumrequired__c.field-meta.xml
<CustomField>
    <fullName>business_condominiumrequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>business_condominiumrequired</label>
    <type>Checkbox</type>
</CustomField>