force-app/main/default/objects/SalesTori_Business__c/fields/business_contractpercent__c.field-meta.xml
<CustomField>
    <fullName>business_contractpercent__c</fullName>
    <label>business_contractpercent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>