force-app/main/default/objects/SalesTori_Business__c/fields/business_createdBy__c.field-meta.xml
<CustomField>
    <fullName>business_createdBy__c</fullName>
    <label>business_createdBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>