force-app/main/default/objects/SalesTori_Business__c/fields/business_createdData__c.field-meta.xml
<CustomField>
    <fullName>business_createdData__c</fullName>
    <label>business_createdData</label>
    <type>DateTime</type>
</CustomField>