force-app/main/default/objects/SalesTori_Business__c/fields/business_customerID_mandatory__c.field-meta.xml
<CustomField>
    <fullName>business_customerID_mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>business_customerID_mandatory</label>
    <type>Checkbox</type>
</CustomField>