force-app/main/default/objects/SalesTori_Business__c/fields/business_deliveryterm__c.field-meta.xml
<CustomField>
    <fullName>business_deliveryterm__c</fullName>
    <label>business_deliveryterm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>