force-app/main/default/objects/SalesTori_Business__c/fields/business_deliverytime__c.field-meta.xml
<CustomField>
    <fullName>business_deliverytime__c</fullName>
    <label>business_deliverytime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>