force-app/main/default/objects/SalesTori_Business__c/fields/business_domestichelp_inuse__c.field-meta.xml
<CustomField>
    <fullName>business_domestichelp_inuse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>business_domestichelp_inuse</label>
    <type>Checkbox</type>
</CustomField>