force-app/main/default/objects/SalesTori_Business__c/fields/business_fastening_group__c.field-meta.xml
<CustomField>
    <fullName>business_fastening_group__c</fullName>
    <label>business_fastening_group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>