force-app/main/default/objects/SalesTori_Business__c/fields/business_fax__c.field-meta.xml
<CustomField>
    <fullName>business_fax__c</fullName>
    <label>business_fax</label>
    <type>Phone</type>
</CustomField>