force-app/main/default/objects/SalesTori_Business__c/fields/business_financingcustomernumber__c.field-meta.xml
<CustomField>
    <fullName>business_financingcustomernumber__c</fullName>
    <label>business_financingcustomernumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>