force-app/main/default/objects/SalesTori_Business__c/fields/business_followupcall_in_use__c.field-meta.xml
<CustomField>
    <fullName>business_followupcall_in_use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>business_followupcall_in_use</label>
    <type>Checkbox</type>
</CustomField>