force-app/main/default/objects/SalesTori_Business__c/fields/business_generateplantorixml__c.field-meta.xml
<CustomField>
    <fullName>business_generateplantorixml__c</fullName>
    <defaultValue>false</defaultValue>
    <label>business_generateplantorixml</label>
    <type>Checkbox</type>
</CustomField>