force-app/main/default/objects/SalesTori_Business__c/fields/business_household_deduction_percent__c.field-meta.xml
<CustomField>
    <fullName>business_household_deduction_percent__c</fullName>
    <label>business_household_deduction_percent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>