force-app/main/default/objects/SalesTori_Business__c/fields/business_include_visual_blinds__c.field-meta.xml
<CustomField>
    <fullName>business_include_visual_blinds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>business_include_visual_blinds</label>
    <type>Checkbox</type>
</CustomField>