force-app/main/default/objects/SalesTori_Business__c/fields/business_installation_complete_xml__c.field-meta.xml
<CustomField>
    <fullName>business_installation_complete_xml__c</fullName>
    <defaultValue>false</defaultValue>
    <label>business_installation_complete_xml</label>
    <type>Checkbox</type>
</CustomField>