force-app/main/default/objects/SalesTori_Business__c/fields/business_invoicecustomernumber__c.field-meta.xml
<CustomField>
    <fullName>business_invoicecustomernumber__c</fullName>
    <label>business_invoicecustomernumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>