force-app/main/default/objects/SalesTori_Business__c/fields/business_LastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>business_LastModifiedBy__c</fullName>
    <label>business_LastModifiedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>