force-app/main/default/objects/SalesTori_Business__c/fields/business_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>business_LastModifiedDate__c</fullName>
    <label>business_LastModifiedDate</label>
    <type>DateTime</type>
</CustomField>