force-app/main/default/objects/SalesTori_Business__c/fields/business_maincontractor_limit__c.field-meta.xml
<CustomField>
    <fullName>business_maincontractor_limit__c</fullName>
    <label>business_maincontractor_limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>