force-app/main/default/objects/SalesTori_Business__c/fields/business_measureunit__c.field-meta.xml
<CustomField>
    <fullName>business_measureunit__c</fullName>
    <label>business_measureunit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>