force-app/main/default/objects/SalesTori_Business__c/fields/business_nme__c.field-meta.xml
<CustomField>
    <fullName>business_nme__c</fullName>
    <label>business_nme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>