force-app/main/default/objects/SalesTori_Business__c/fields/business_number__c.field-meta.xml
<CustomField>
    <fullName>business_number__c</fullName>
    <label>business_number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>