force-app/main/default/objects/SalesTori_Business__c/fields/business_offervalid__c.field-meta.xml
<CustomField>
    <fullName>business_offervalid__c</fullName>
    <label>business_offervalid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>