force-app/main/default/objects/SalesTori_Business__c/fields/business_paymentterm__c.field-meta.xml
<CustomField>
    <fullName>business_paymentterm__c</fullName>
    <label>business_paymentterm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>