force-app/main/default/objects/SalesTori_Business__c/fields/business_phone__c.field-meta.xml
<CustomField>
    <fullName>business_phone__c</fullName>
    <label>business_phone</label>
    <type>Phone</type>
</CustomField>