force-app/main/default/objects/SalesTori_Business__c/fields/business_resales_other_deliveryaddress__c.field-meta.xml
<CustomField>
    <fullName>business_resales_other_deliveryaddress__c</fullName>
    <label>business_resales_other_deliveryaddress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>