force-app/main/default/objects/SalesTori_Business__c/fields/business_salesperson_maxdiscountpercent__c.field-meta.xml
<CustomField>
    <fullName>business_salesperson_maxdiscountpercent__c</fullName>
    <label>business_salesperson_maxdiscountpercent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>