force-app/main/default/objects/SalesTori_Business__c/fields/business_scrive_create_contract__c.field-meta.xml
<CustomField>
    <fullName>business_scrive_create_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>business_scrive_create_contract</label>
    <type>Checkbox</type>
</CustomField>