force-app/main/default/objects/SalesTori_Business__c/fields/business_scrivedialog_visible__c.field-meta.xml
<CustomField>
    <fullName>business_scrivedialog_visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>business_scrivedialog_visible</label>
    <type>Checkbox</type>
</CustomField>