force-app/main/default/objects/SalesTori_Business__c/fields/business_show_salesmargin__c.field-meta.xml
<CustomField>
    <fullName>business_show_salesmargin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>business_show_salesmargin</label>
    <type>Checkbox</type>
</CustomField>