force-app/main/default/objects/SalesTori_Business__c/fields/business_state__c.field-meta.xml
<CustomField>
    <fullName>business_state__c</fullName>
    <label>business_state</label>
    <length>255</length>
    <type>Text</type>
</CustomField>