force-app/main/default/objects/SalesTori_Business__c/fields/business_street1__c.field-meta.xml
<CustomField>
    <fullName>business_street1__c</fullName>
    <label>business_street1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>