force-app/main/default/objects/SalesTori_Business__c/fields/business_street2__c.field-meta.xml
<CustomField>
    <fullName>business_street2__c</fullName>
    <label>business_street2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>