force-app/main/default/objects/SalesTori_Business__c/fields/business_template__c.field-meta.xml
<CustomField>
    <fullName>business_template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>business_template</label>
    <type>Checkbox</type>
</CustomField>