force-app/main/default/objects/SalesTori_Business__c/fields/business_usa_canada__c.field-meta.xml
<CustomField>
    <fullName>business_usa_canada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>business_usa_canada</label>
    <type>Checkbox</type>
</CustomField>