force-app/main/default/objects/SalesTori_Business__c/fields/business_vat__c.field-meta.xml
<CustomField>
    <fullName>business_vat__c</fullName>
    <label>business_vat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>