force-app/main/default/objects/SalesTori_Business__c/fields/business_vendor_id_selectable_bol__c.field-meta.xml
<CustomField>
    <fullName>business_vendor_id_selectable_bol__c</fullName>
    <label>business_vendor_id_selectable_bol</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>