force-app/main/default/objects/SalesTori_Business__c/fields/business_visor_reseller__c.field-meta.xml
<CustomField>
    <fullName>business_visor_reseller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>business_visor_reseller</label>
    <type>Checkbox</type>
</CustomField>