force-app/main/default/objects/SalesTori_Business__c/fields/business_visual_zmeasurelimit_enabled__c.field-meta.xml
<CustomField>
    <fullName>business_visual_zmeasurelimit_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>business_visual_zmeasurelimit_enabled</label>
    <type>Checkbox</type>
</CustomField>