force-app/main/default/objects/SalesTori_Business__c/fields/business_webshop_default_salesperson_id__c.field-meta.xml
<CustomField>
    <fullName>business_webshop_default_salesperson_id__c</fullName>
    <label>business_webshop_default_salesperson_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>