force-app/main/default/objects/SalesTori_Business__c/fields/business_zipcode__c.field-meta.xml
<CustomField>
    <fullName>business_zipcode__c</fullName>
    <label>business_zipcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>