force-app/main/default/objects/SalesTori_Business__c/fields/country_alpha2__c.field-meta.xml
<CustomField>
    <fullName>country_alpha2__c</fullName>
    <label>country_alpha2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>