force-app/main/default/objects/SalesTori_Business__c/fields/currency__c.field-meta.xml
<CustomField>
    <fullName>currency__c</fullName>
    <label>currency_acr</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>PLN</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>SEK</fullName>
            </value>
            <value>
                <fullName>NOK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>