force-app/main/default/objects/SalesTori_Business__c/fields/deliveryway_display_nme__c.field-meta.xml
<CustomField>
    <fullName>deliveryway_display_nme__c</fullName>
    <label>deliveryway_display_nme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>