force-app/main/default/objects/SalesTori_Business__c/fields/language_code_lan__c.field-meta.xml
<CustomField>
    <fullName>language_code_lan__c</fullName>
    <label>language_code_lan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>fi-FI</fullName>
            </value>
            <value>
                <fullName>nb-NO</fullName>
            </value>
            <value>
                <fullName>ru-RU</fullName>
            </value>
            <value>
                <fullName>pl-PL</fullName>
            </value>
            <value>
                <fullName>de-DE</fullName>
            </value>
            <value>
                <fullName>en-CA</fullName>
            </value>
            <value>
                <fullName>en-US</fullName>
            </value>
            <value>
                <fullName>sv-SE</fullName>
            </value>
            <value>
                <fullName>es-ES</fullName>
            </value>
            <value>
                <fullName>fr-FR</fullName>
            </value>
            <value>
                <fullName>de-CH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>