force-app/main/default/objects/SalesTori_Business__c/fields/paymentmethod_display__c.field-meta.xml
<CustomField>
    <fullName>paymentmethod_display__c</fullName>
    <label>paymentmethod_display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>