force-app/main/default/objects/SalesTori_Business__c/fields/paymentterm__c.field-meta.xml
<CustomField>
    <fullName>paymentterm__c</fullName>
    <label>paymentterm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>