force-app/main/default/objects/SalesTori_Business__c/fields/warehouse_id__c.field-meta.xml
<CustomField>
    <fullName>warehouse_id__c</fullName>
    <label>warehouse_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>