force-app/main/default/objects/SalesTori_Business__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>business_id__c</columns>
    <columns>businesstype__c</columns>
    <columns>business_nme__c</columns>
    <columns>district_id__c</columns>
    <columns>paymentterm__c</columns>
    <columns>business_paymentterm__c</columns>
    <columns>business_deliveryterm__c</columns>
    <columns>business_vat__c</columns>
    <columns>currency__c</columns>
    <columns>defaultsettings_id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>